# ecs-terraform

./: .gitignore  README.md
fastapi/: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
fastapi/api/: db.py  main.py  migrate_db.py
fastapi/api/cruds/: done.py  task.py  user.py
fastapi/api/models/: task.py  user.py
fastapi/api/routers/: done.py  health_check.py  task.py  user.py
fastapi/api/schemas/: task.py  user.py
fastapi/migrations/: env.py
fastapi/migrations/versions/: 1a7541b3a299_create_tables.py  65185a17e3a7_initial_migrate.py
fastapi/tests/: test_main.py
terraform/: main.tf  variables.tf
terraform/modules/alb/: alb.tf  outputs.tf  tg.tf  variables.tf
terraform/modules/cloudwatch/: logs.tf  outputs.tf  variables.tf
terraform/modules/ecr/: dockerbuild.sh  ecr.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/ecs/: cluster.tf  provider.tf  service.tf  task.tf  task_definition.json  variables.tf
terraform/modules/iam/: outputs.tf  role.tf  variables.tf
terraform/modules/network/: ig.tf  outputs.tf  rt.tf  subnet.tf  variables.tf  vpc.tf
terraform/modules/route53/: acm.tf  outputs.tf  route53.tf  variables.tf
terraform/modules/sg/: outputs.tf  sg.tf  variables.tf
